--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
 .developer{
         font-style: normal;
         font-weight: bold;
-        font-size: 14px;
+        font-size: 16px;
         line-height: 17px;
         color: #000000;
         margin-bottom: 10px;
@@ -50,8 +50,14 @@ body{
 
 .about { 
      margin-bottom: 39px; 
+
 }
 
+.line_{
+    margin: 0;
+    justify-content: left;
+    width: 170px;
+}
 /* project styles */
 .projects {
      margin-bottom: 55px;
@@ -124,6 +130,9 @@ body{
         line-height: 15px;
         color: #000000;
 }
+.work{
+    margin-bottom: 60px;
+}
 .work-list{
     padding: 0;
     margin-left: 15px;
@@ -134,6 +143,9 @@ body{
     font-size: 14px;
     line-height: 24px;
     color: #595959;
+}
+.education{
+    margin-bottom: 60px;
 }
 /* sidebar */
 .sidebar{
@@ -152,6 +164,11 @@ body{
 .contacts{
     margin-bottom: 45px;
 }
+.icon-style{
+    width: 20px;
+    height: 20px;
+}
+
 .tech-skills{
     margin-bottom: 44px;
 }
@@ -166,15 +183,10 @@ body{
         margin-bottom: 20px;
 
 }
-.contact-type{
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 24px;
-        color: #FFFFFF;
-        margin-right: 10px;
+.contact-type {
+    margin-right: 10px; 
 }
+
 .contact-link{
         font-family: 'Montserrat';
         font-style: normal;
@@ -183,6 +195,7 @@ body{
         line-height: 24px;
         color: #FFFFFF;
         opacity: 0.5;
+        
 }
 
 /* Tech skills */
